--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
 
     <h1> 오늘의 날씨입니다. </h1>
+    <button onclick = "getWeather()"> 날씨 가져오기 </button>"
+    <p id = "temperature"> </p>
+    <script>
+        function getWeather()
+        {
+            
+        }
+    </script>
     
 </body>
 </html>
