--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
 <body>
 
     <h1> 오늘의 날씨입니다. </h1>
+
+    <input id = "city" type = "text" value = "">
+
+
     <button onclick = "getWeather()"> 날씨 가져오기 </button>
     <p id = "temperature"> </p>
     <script>
         function getWeather()
         {
-            fetch('http://goweather.herokuapp.com/weather/Gangneung')
+            let city = document.getElementById("city").value;
+
+            fetch('http://goweather.herokuapp.com/weather/' + city)
             .then((response) => response.json())
             .then((data) => {
                 document.getElementById("temperature").innerHTML = data['temperature'];
