--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <title>Document</title>
 </head>
 
@@ -12,8 +13,6 @@
     <h1> 오늘의 날씨입니다. </h1>
 
     <input id = "city" type = "text" value = "">
-
-
     <button onclick = "getWeather()"> 날씨 가져오기 </button>
     <p id = "temperature"> </p>
     <script>
